--- a/content/data.html
+++ b/content/data.html
@@ -12,25 +12,8 @@ draft: false
 
 </div>
 
-<pre class="r"><code>data = c(&#39;Tm&#39;,&#39;G&#39;,&#39;GS&#39;,&#39;MP&#39;,&#39;PER&#39;,&#39;TS%&#39;,&#39;3PAr&#39;,&#39;FTr&#39;,&#39;ORB%&#39;,&#39;DRB%&#39;,&#39;TRB%&#39;,&#39;AST%&#39;,
-         &#39;STL%&#39;,&#39;BLK%&#39;,&#39;TOV%&#39;,&#39;USG%&#39;,&#39;OWS&#39;,&#39;DWS&#39;,&#39;WS&#39;,&#39;WS/48&#39;,&#39;OBPM&#39;,&#39;DBPM&#39;,&#39;BPM&#39;,
-         &#39;VORP&#39;,&#39;FG&#39;,&#39;FGA&#39;,&#39;FG%&#39;,&#39;3P&#39;,&#39;3PA&#39;,&#39;3P%&#39;,&#39;2P&#39;,&#39;2PA&#39;,&#39;2P%&#39;,&#39;eFG%&#39;,&#39;FT&#39;,
-         &#39;FTA&#39;,&#39;FT%&#39;,&#39;ORB&#39;,&#39;DRB&#39;,&#39;TRB&#39;,&#39;AST&#39;,&#39;STL&#39;,&#39;BLK&#39;,&#39;TOV&#39;,&#39;PF&#39;,&#39;PTS&#39;,&#39;Team&#39;,
-         &#39;Game Played&#39;,&#39;Game Started&#39;,&#39;Minutes Played&#39;,&#39;Player Efficiency Rating&#39;,
-         &#39;True Shooting Percentage&#39;,&#39;3 point attempt rate&#39;,&#39;Free Throws rate&#39;,
-         &#39;Offensive Rebounds Percentage&#39;,&#39;Defensive Rebounds Precentage&#39;,
-         &#39;Total Rebounds Percentage&#39;,&#39;Assists Percentage&#39;,&#39;Steals Percentage&#39;,
-         &#39;Blocked Shots Percentage&#39;,&#39;Turnovers Percentage&#39;,&#39;Usage Percentage&#39;,
-         &#39;Offensive Win Shares&#39;,&#39;Defensive Win Shares&#39;,&#39;Win Shares&#39;,
-         &#39;Win Shares/48 Minutes&#39;,&#39;Offensive Box Plus/Minus&#39;,&#39;Defensive Box Plus/Minus&#39;,
-         &#39;Box Plus/Minus&#39;,&#39;Value over Placement Player&#39;,&#39;Field Goals Made&#39;,
-         &#39;Field Goals Attempt&#39;,&#39;Field Goals percentage&#39;,&#39;3 points&#39;,&#39;3 points attempt&#39;,
-         &#39;3 points percentage&#39;,&#39;2 points&#39;,&#39;2 points attempt&#39;,&#39;2 points percentage&#39;,
-         &#39;effective field goal percentage&#39;,&#39;free throws made&#39;,&#39;free throws attempted&#39;,
-         &#39;free throws percentage&#39;,&#39;Offensive Rebounds&#39;,&#39;Defensive Rebounds&#39;,
-         &#39;Total Rebounds&#39;,&#39;Assists&#39;,&#39;Steals&#39;,&#39;Blocked Shots&#39;,&#39;Turnovers&#39;,
-         &#39;Person Fouls&#39;,&#39;Points Scored&#39;)
-matrix(data,nrow=46,ncol=2,byrow=FALSE)</code></pre>
+<div id="variable-names" class="section level2">
+<h2>Variable Names</h2>
 <pre><code>##       [,1]    [,2]                             
 ##  [1,] &quot;Tm&quot;    &quot;Team&quot;                           
 ##  [2,] &quot;G&quot;     &quot;Game Played&quot;                    
@@ -78,6 +61,7 @@ matrix(data,nrow=46,ncol=2,byrow=FALSE)</code></pre>
 ## [44,] &quot;TOV&quot;   &quot;Turnovers&quot;                      
 ## [45,] &quot;PF&quot;    &quot;Person Fouls&quot;                   
 ## [46,] &quot;PTS&quot;   &quot;Points Scored&quot;</code></pre>
+</div>
 <div id="dataset-summary" class="section level2">
 <h2>Dataset Summary</h2>
 <p><a href="https://github.com/peasant98/TheNBACSV" class="uri">https://github.com/peasant98/TheNBACSV</a></p>
@@ -102,16 +86,19 @@ Randall Hopkins collected the data and put it together.</p>
 <pre class="r"><code>library(rvest)
 library(tidyverse)</code></pre>
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-## ✔ ggplot2 3.4.0      ✔ purrr   0.3.4 
+## ✔ ggplot2 3.4.0      ✔ purrr   0.3.5 
 ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
 ## ✔ tidyr   1.2.1      ✔ stringr 1.4.1 
-## ✔ readr   2.1.2      ✔ forcats 0.5.2 
+## ✔ readr   2.1.3      ✔ forcats 0.5.2 
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter()         masks stats::filter()
 ## ✖ readr::guess_encoding() masks rvest::guess_encoding()
 ## ✖ dplyr::lag()            masks stats::lag()</code></pre>
 <pre class="r"><code>nba &lt;- read_csv(here::here(&quot;dataset&quot;, &quot;nbaNew.csv&quot;), col_types = cols(PlayerSalary = col_number(), `TS%` = col_number(),`ORB%` = col_number(),`DRB%` = col_number(),`TRB%` = col_number(),`AST%` = col_number(),`STL%` = col_number(),`BLK%` = col_number(),`TOV%` = col_number(),`USG%` = col_number(),`FG%` = col_number(),`3P%` = col_number(),`2P%` = col_number(),`eFG%` = col_number(),`FT%` = col_number()))</code></pre>
-<pre><code>## Warning: One or more parsing issues, see `problems()` for details</code></pre>
+<pre><code>## Warning: One or more parsing issues, call `problems()` on your data frame for details,
+## e.g.:
+##   dat &lt;- vroom(...)
+##   problems(dat)</code></pre>
 <pre class="r"><code>nba_clean&lt;- select(nba, -(blanl), -(blank2), -(`3P`), -(`3PA`),-(`3P%`))%&gt;%
   na_if(&quot;&quot;)%&gt;%
   filter(!row_number() %in% c(24625, 24626, 24627, 24628))</code></pre>
