--- a/content/analysis.html
+++ b/content/analysis.html
@@ -14,7 +14,7 @@ draft: false
 
 <div id="motivation-and-initial-questions" class="section level2">
 <h2>Motivation and Initial Questions</h2>
-<p>abcd</p>
+<p>abc</p>
 </div>
 <div id="important-variable-in-nba" class="section level2">
 <h2>Important Variable in NBA</h2>
