--- a/content/data.html
+++ b/content/data.html
@@ -38,7 +38,7 @@ draft: false
 ## [21,] &quot;OBPM&quot;  &quot;Offensive Box Plus/Minus&quot;       
 ## [22,] &quot;DBPM&quot;  &quot;Defensive Box Plus/Minus&quot;       
 ## [23,] &quot;BPM&quot;   &quot;Box Plus/Minus&quot;                 
-## [24,] &quot;VORP&quot;  &quot;Value over Placement Player&quot;    
+## [24,] &quot;VORP&quot;  &quot;Value over Replacement Player&quot;  
 ## [25,] &quot;FG&quot;    &quot;Field Goals Made&quot;               
 ## [26,] &quot;FGA&quot;   &quot;Field Goals Attempt&quot;            
 ## [27,] &quot;FG%&quot;   &quot;Field Goals percentage&quot;         
