--- a/content/analysis.html
+++ b/content/analysis.html
@@ -14,12 +14,16 @@ draft: false
 
 <div id="motivation-and-initial-questions" class="section level2">
 <h2>Motivation and Initial Questions</h2>
-<p>For the EDA, our initial questions are
-What are the variables that have the most significant contribution to a team’s competence?
-Are these variables we interested in truly increasing the chance of a team winning the championship?
-Can we make championship predictions based on the variables we selected?
-What type of model can we use to make the predictions, is the model reliable/accurate?
-What are some limitations of the model and other factors that have potential influence on our prediction?</p>
+<ul>
+<li>For the EDA, our initial questions are
+<ul>
+<li>What are the variables that have the most significant contribution to a team’s competence?</li>
+<li>Are these variables we interested in truly increasing the chance of a team winning the championship?</li>
+<li>Can we make championship predictions based on the variables we selected?</li>
+<li>What type of model can we use to make the predictions, is the model reliable/accurate?</li>
+<li>What are some limitations of the model and other factors that have potential influence on our prediction?</li>
+</ul></li>
+</ul>
 </div>
 <div id="modeling" class="section level2">
 <h2>Modeling</h2>
